--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,17 +16,24 @@ spring:
     password: belle3079!
     connection-timeout: 10000 # 10초로 늘리기
   jpa:
-    show-sql : true
+    # show-sql: true
     properties:
       hibernate:
         ddl-auto: update # 운영 환경에서는 'validate' 또는 'none'을 권장
         dialect: org.hibernate.dialect.MySQL8Dialect # 중요 -mysql8 Dialect 설정
-        formay_sql : true
+        format_sql: true
 
 
-logging:
-  level:
-    org.thymeleaf: DEBUG
+# logging:
+#   level:
+#     org.thymeleaf: DEBUG
+#     org:
+#       hibernate:
+#         SQL: DEBUG
+#         type:
+#           descriptor:
+#             sql:
+#               BasicBinder: TRACE
 
 aws:
   s3:
