--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -43,7 +43,7 @@ aws:
   s3:
     bucket: myrecipe-bucket
     recipe-folder: recipe
-    region: us-east-1
+    region: ap-northeast-3
 
 
 server:
