--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,6 +5,9 @@ on:
     branches:
       - master
 
+env:
+  ENVIRONMENT: ${{ vars.ENVIRONMENT || 'development' }}
+
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
@@ -14,60 +17,19 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # 2. .env 파일 로드 및 검증
-      - name: Load and validate .env file
+      # 2. 배포 정보 출력
+      - name: Print deployment information
         run: |
-          if [ -f .env ]; then
-            export $(cat .env | grep -v '#' | awk '/=/ {print $1}')
-          else
-            echo ".env 파일이 없습니다. .env 파일을 확인해주세요."
-            exit 1
-          fi
-          # 환경 변수 검증
-          if [ -z "$AWS_ACCOUNT_ID" ]; then
-            echo "AWS_ACCOUNT_ID가 설정되지 않았습니다. .env 파일을 확인해주세요."
-            exit 1
-          fi
-          if [ -z "$AWS_REGION" ]; then
-            echo "AWS_REGION이 설정되지 않았습니다. .env 파일을 확인해주세요."
-            exit 1
-          fi
-          if [ -z "$ECR_REPOSITORY_NAME" ]; then
-            echo "ECR_REPOSITORY_NAME이 설정되지 않았습니다. .env 파일을 확인해주세요."
-            exit 1
-          fi
-          if [ -z "$ECS_CLUSTER" ]; then
-            echo "ECS_CLUSTER가 설정되지 않았습니다. .env 파일을 확인해주세요."
-            exit 1
-          fi
-          if [ -z "$ECS_SERVICE" ]; then
-            echo "ECS_SERVICE가 설정되지 않았습니다. .env 파일을 확인해주세요."
-            exit 1
-          fi
-          # ENVIRONMENT 검증
-          if [ -z "$ENVIRONMENT" ]; then
-            echo "ENVIRONMENT가 설정되지 않아 기본값 'development'로 설정됩니다."
-            export ENVIRONMENT="development"
-          fi
-          case "$ENVIRONMENT" in
-            "dev")
-              export ENVIRONMENT="development"
-              echo "ENVIRONMENT 'dev'가 'development'로 변환되었습니다."
-              ;;
-            "test"|"development")
-              ;;
-            *)
-              echo "지원하지 않는 ENVIRONMENT 값입니다: $ENVIRONMENT"
-              echo "기본값 'development'로 설정됩니다."
-              export ENVIRONMENT="development"
-              ;;
-          esac
-          # 배포 정보 출력
           echo "=== 배포 정보 ==="
-          echo "AWS Account ID: $AWS_ACCOUNT_ID"
-          echo "AWS Region: $AWS_REGION"
-          echo "ECR Repository: $ECR_REPOSITORY_NAME"
-          echo "Environment: $ENVIRONMENT"
+          echo "AWS Account ID: ${{ secrets.AWS_ACCOUNT_ID }}"
+          echo "AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}"
+          echo "AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}"
+          echo "AWS Region: ${{ secrets.AWS_REGION }}"
+          echo "Environment: ${{ vars.ENVIRONMENT }}"
+          echo "ECR Repository: ${{ secrets.ECR_REPOSITORY_NAME }}"
+          echo "ECS Cluster: ${{ secrets.ECS_CLUSTER }}"
+          echo "ECS Service: ${{ secrets.ECS_SERVICE }}"
+          
 
       # 3. Java 환경 설정 (Spring Boot 프로젝트용)
       - name: Set up JDK
@@ -80,9 +42,9 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          aws-access-key-id: ${{ env.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ env.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ env.AWS_REGION }}
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
 
       - name: Login to Amazon ECR
         id: login-ecr
@@ -99,24 +61,24 @@ jobs:
       # 6. Docker 이미지 빌드
       - name: Build Docker image
         run: |
-          IMAGE_TAG="${ECR_REPOSITORY_NAME}:${ENVIRONMENT}"
+          IMAGE_TAG="${{ secrets.ECR_REPOSITORY_NAME }}:${{ vars.ENVIRONMENT }}"
           ./gradlew bootBuildImage --imageName=${IMAGE_TAG}
 
       # 7. ECR에 이미지 태그 지정 및 푸시
       - name: Tag and push image to Amazon ECR
         run: |
-          ECR_URI="${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com/${ECR_REPOSITORY_NAME}"
-          docker tag ${ECR_REPOSITORY_NAME}:${ENVIRONMENT} ${ECR_URI}:${ENVIRONMENT}
-          docker push ${ECR_URI}:${ENVIRONMENT}
-          echo "Pushed image: ${ECR_URI}:${ENVIRONMENT}"
+          ECR_URI="${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/${{ secrets.ECR_REPOSITORY_NAME }}"
+          docker tag ${{ secrets.ECR_REPOSITORY_NAME }}:${{ vars.ENVIRONMENT }} ${ECR_URI}:${{ vars.ENVIRONMENT }}
+          docker push ${ECR_URI}:${{ vars.ENVIRONMENT }}
+          echo "Pushed image: ${ECR_URI}:${{ vars.ENVIRONMENT }}"
 
       # 8. ECS 태스크 정의 업데이트 및 배포
       - name: Update ECS service
         run: |
-          ECR_URI="${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com/${ECR_REPOSITORY_NAME}"
+          ECR_URI="${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/${{ secrets.ECR_REPOSITORY_NAME }}"
           aws ecs update-service \
-            --cluster ${ECS_CLUSTER} \
-            --service ${ECS_SERVICE} \
+            --cluster ${{ secrets.ECS_CLUSTER }} \
+            --service ${{ secrets.ECS_SERVICE }} \
             --force-new-deployment \
-            --region ${AWS_REGION}
-          echo "ECS service ${ECS_SERVICE} updated with new image: ${ECR_URI}:${ENVIRONMENT}"
+            --region ${{ secrets.AWS_REGION }}
+          echo "ECS service ${{ secrets.ECS_SERVICE }} updated with new image: ${ECR_URI}:${{ vars.ENVIRONMENT }}"
