--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,12 +4,32 @@ on:
   push:
     branches:
       - master
+    paths-ignore:
+      - 'README.md'
+      - '.gitignore'
+      - '**/*.md'
+    paths:
+      - 'src/**'
+      - 'build.gradle'
+      - 'settings.gradle'
+      - 'gradle.properties'
+      - '.github/workflows/deploy.yml'
 
 env:
-  ENVIRONMENT: ${{ vars.ENVIRONMENT || 'development' }}
+  ENVIRONMENT: ${{ 
+    if(vars.ENVIRONMENT == 'dev', 'development', 
+      if(vars.ENVIRONMENT == 'test', 'test',
+        if(vars.ENVIRONMENT == 'production', 'production',
+          'development'
+        )
+      )
+    )}}
+  DEPLOY: ${{ env.DEPLOY || 'Y' }}
+  echo "Deploy: ${{ env.DEPLOY }}"
 
 jobs:
   build-and-deploy:
+    if: env.DEPLOY == 'Y'
     runs-on: ubuntu-latest
 
     steps:
@@ -22,14 +42,11 @@ jobs:
         run: |
           echo "=== 배포 정보 ==="
           echo "AWS Account ID: ${{ secrets.AWS_ACCOUNT_ID }}"
-          echo "AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}"
-          echo "AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}"
-          echo "AWS Region: ${{ secrets.AWS_REGION }}"
-          echo "Environment: ${{ vars.ENVIRONMENT }}"
-          echo "ECR Repository: ${{ secrets.ECR_REPOSITORY_NAME }}"
-          echo "ECS Cluster: ${{ secrets.ECS_CLUSTER }}"
-          echo "ECS Service: ${{ secrets.ECS_SERVICE }}"
-          
+          echo "AWS Region: ${{ vars.AWS_REGION }}"
+          echo "Environment: ${{ env.ENVIRONMENT }}"
+          echo "ECR Repository: ${{ vars.ECR_REPOSITORY_NAME }}"
+          echo "ECS Cluster: ${{ vars.ECS_CLUSTER }}"
+          echo "ECS Service: ${{ vars.ECS_SERVICE }}"
 
       # 3. Java 환경 설정 (Spring Boot 프로젝트용)
       - name: Set up JDK
@@ -44,7 +61,7 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.AWS_REGION }}
+          aws-region: ${{ vars.AWS_REGION }}
 
       - name: Login to Amazon ECR
         id: login-ecr
@@ -61,24 +78,24 @@ jobs:
       # 6. Docker 이미지 빌드
       - name: Build Docker image
         run: |
-          IMAGE_TAG="${{ secrets.ECR_REPOSITORY_NAME }}:${{ vars.ENVIRONMENT }}"
+          IMAGE_TAG="${{ vars.ECR_REPOSITORY_NAME }}:${{ env.ENVIRONMENT }}"
           ./gradlew bootBuildImage --imageName=${IMAGE_TAG}
 
       # 7. ECR에 이미지 태그 지정 및 푸시
       - name: Tag and push image to Amazon ECR
         run: |
-          ECR_URI="${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/${{ secrets.ECR_REPOSITORY_NAME }}"
-          docker tag ${{ secrets.ECR_REPOSITORY_NAME }}:${{ vars.ENVIRONMENT }} ${ECR_URI}:${{ vars.ENVIRONMENT }}
-          docker push ${ECR_URI}:${{ vars.ENVIRONMENT }}
-          echo "Pushed image: ${ECR_URI}:${{ vars.ENVIRONMENT }}"
+          ECR_URI="${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ vars.AWS_REGION }}.amazonaws.com/${{ vars.ECR_REPOSITORY_NAME }}"
+          docker tag ${{ vars.ECR_REPOSITORY_NAME }}:${{ env.ENVIRONMENT }} ${ECR_URI}:${{ env.ENVIRONMENT }}
+          docker push ${ECR_URI}:${{ env.ENVIRONMENT }}
+          echo "Pushed image: ${ECR_URI}:${{ env.ENVIRONMENT }}"
 
       # 8. ECS 태스크 정의 업데이트 및 배포
       - name: Update ECS service
         run: |
-          ECR_URI="${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/${{ secrets.ECR_REPOSITORY_NAME }}"
+          ECR_URI="${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ vars.AWS_REGION }}.amazonaws.com/${{ vars.ECR_REPOSITORY_NAME }}"
           aws ecs update-service \
-            --cluster ${{ secrets.ECS_CLUSTER }} \
-            --service ${{ secrets.ECS_SERVICE }} \
+            --cluster ${{ vars.ECS_CLUSTER }} \
+            --service ${{ vars.ECS_SERVICE }} \
             --force-new-deployment \
-            --region ${{ secrets.AWS_REGION }}
-          echo "ECS service ${{ secrets.ECS_SERVICE }} updated with new image: ${ECR_URI}:${{ vars.ENVIRONMENT }}"
+            --region ${{ vars.AWS_REGION }}
+          echo "ECS service ${{ vars.ECS_SERVICE }} updated with new image: ${ECR_URI}:${{ env.ENVIRONMENT }}"
