--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,32 +4,22 @@ on:
   push:
     branches:
       - master
-    paths-ignore:
-      - 'README.md'
-      - '.gitignore'
-      - '**/*.md'
     paths:
       - 'src/**'
       - 'build.gradle'
       - 'settings.gradle'
       - 'gradle.properties'
       - '.github/workflows/deploy.yml'
+      - '!README.md'
+      - '!.gitignore'
+      - '!**/*.md'
 
 env:
-  ENVIRONMENT: ${{ 
-    if(vars.ENVIRONMENT == 'dev', 'development', 
-      if(vars.ENVIRONMENT == 'test', 'test',
-        if(vars.ENVIRONMENT == 'production', 'production',
-          'development'
-        )
-      )
-    )}}
-  DEPLOY: ${{ env.DEPLOY || 'Y' }}
-  echo "Deploy: ${{ env.DEPLOY }}"
+  ENVIRONMENT: development
+  DEPLOY: Y
 
 jobs:
   build-and-deploy:
-    if: env.DEPLOY == 'Y'
     runs-on: ubuntu-latest
 
     steps:
@@ -37,7 +27,22 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # 2. 배포 정보 출력
+      # 2. 환경 변수 설정
+      - name: Set environment variables
+        run: |
+          if [ "${{ vars.ENVIRONMENT }}" = "dev" ]; then
+            echo "ENVIRONMENT=development" >> $GITHUB_ENV
+          elif [ "${{ vars.ENVIRONMENT }}" = "test" ]; then
+            echo "ENVIRONMENT=test" >> $GITHUB_ENV
+          elif [ "${{ vars.ENVIRONMENT }}" = "production" ]; then
+            echo "ENVIRONMENT=production" >> $GITHUB_ENV
+          fi
+          
+          if [ "${{ vars.DEPLOY }}" = "N" ]; then
+            echo "DEPLOY=N" >> $GITHUB_ENV
+          fi
+
+      # 3. 배포 정보 출력
       - name: Print deployment information
         run: |
           echo "=== 배포 정보 ==="
@@ -47,15 +52,23 @@ jobs:
           echo "ECR Repository: ${{ vars.ECR_REPOSITORY_NAME }}"
           echo "ECS Cluster: ${{ vars.ECS_CLUSTER }}"
           echo "ECS Service: ${{ vars.ECS_SERVICE }}"
+          echo "Deploy: ${{ env.DEPLOY }}"
 
-      # 3. Java 환경 설정 (Spring Boot 프로젝트용)
+      # 4. 배포 건너뛰기 확인
+      - name: Check if deployment should be skipped
+        if: env.DEPLOY == 'N'
+        run: |
+          echo "Deployment is disabled. Exiting workflow."
+          exit 0
+
+      # 5. Java 환경 설정 (Spring Boot 프로젝트용)
       - name: Set up JDK
         uses: actions/setup-java@v4
         with:
           java-version: '21'
           distribution: 'temurin'
 
-      # 4. AWS CLI 설정 및 ECR 로그인
+      # 6. AWS CLI 설정 및 ECR 로그인
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
@@ -67,7 +80,7 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2
 
-      # 5. Gradle 캐시 설정 (빌드 속도 개선)
+      # 7. Gradle 캐시 설정 (빌드 속도 개선)
       - name: Cache Gradle dependencies
         uses: actions/cache@v4
         with:
@@ -75,13 +88,13 @@ jobs:
           key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
           restore-keys: ${{ runner.os }}-gradle-
 
-      # 6. Docker 이미지 빌드
+      # 8. Docker 이미지 빌드
       - name: Build Docker image
         run: |
           IMAGE_TAG="${{ vars.ECR_REPOSITORY_NAME }}:${{ env.ENVIRONMENT }}"
           ./gradlew bootBuildImage --imageName=${IMAGE_TAG}
 
-      # 7. ECR에 이미지 태그 지정 및 푸시
+      # 9. ECR에 이미지 태그 지정 및 푸시
       - name: Tag and push image to Amazon ECR
         run: |
           ECR_URI="${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ vars.AWS_REGION }}.amazonaws.com/${{ vars.ECR_REPOSITORY_NAME }}"
@@ -89,7 +102,7 @@ jobs:
           docker push ${ECR_URI}:${{ env.ENVIRONMENT }}
           echo "Pushed image: ${ECR_URI}:${{ env.ENVIRONMENT }}"
 
-      # 8. ECS 태스크 정의 업데이트 및 배포
+      # 10. ECS 태스크 정의 업데이트 및 배포
       - name: Update ECS service
         run: |
           ECR_URI="${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ vars.AWS_REGION }}.amazonaws.com/${{ vars.ECR_REPOSITORY_NAME }}"
