--- a/bin/main/application.yml
+++ b/bin/main/application.yml
@@ -10,7 +10,7 @@ spring:
       max-file-size: 10MB
       max-request-size: 10MB
   datasource:
-    url: jdbc:mysql://my-database-1.chcgci8m4swm.ap-northeast-2.rds.amazonaws.com:3306/food
+    url: jdbc:mysql://my-recipe-db.cfmy4ce0y0zq.ap-northeast-3.rds.amazonaws.com:3306/food
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: admin
     password: belle3079!
