--- a/bin/main/application.yml
+++ b/bin/main/application.yml
@@ -26,7 +26,36 @@ spring:
     console:
       enabled: true
       path: /h2-console
+  security:
+    oauth2:
+      client:
+        registration:
+          google:
+            client-id: ${GOOGLE_CLIENT_ID}
+            client-secret: ${GOOGLE_CLIENT_SECRET}
+            scope:
+              - email
+              - profile
 
+# Redis 설정
+redis:
+  host: localhost
+  port: 6379
+  # password: your-redis-password  # 필요한 경우
+  database: 0
+  timeout: 10000
+  lettuce:
+    pool:
+      max-active: 8
+      max-idle: 8
+      min-idle: 0
+      max-wait: -1
+
+# JWT 설정
+jwt:
+  secret: your-jwt-secret-key-here-make-it-long-and-secure
+  access-token-validity-in-seconds: 3600  # 1시간
+  refresh-token-validity-in-seconds: 86400  # 24시간
 
 # logging:
 #   level:
