엔드포인트에 base-path 추가 (api/proxy)

--- a/bin/main/application.yml
+++ b/bin/main/application.yml
@@ -75,6 +75,9 @@ aws:
     recipe-folder: recipe
     region: ap-northeast-3
 
+# API 설정
+api:
+  base-path: /api/proxy
 
 server:
   address: 0.0.0.0
