--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -65,9 +65,13 @@ redis:
 # JWT 설정
 jwt:
   secret: ${JWT_SECRET}
-  access-token-validity-in-seconds: 3600    # 1시간 (3600초)
-  refresh-token-validity-in-seconds: 86400  # 24시간 (86400초)
-  expiration: 86400000 # 24시간
+  # access-token-validity-in-seconds: 3600    # 1시간 (3600초)
+  # refresh-token-validity-in-seconds: 86400  # 24시간 (86400초)
+  # expiration: 86400000 # 24시간
+  access-token-validity-in-seconds: 31536000    # 1년 (31536000초)
+  refresh-token-validity-in-seconds: 31536000  # 1년 (31536000초)
+  expiration: 31536000000 # 1년
+  admin-token: ${ADMIN-TOKEN} # 관리자 토큰
 
 logging:
   level:
