OAuth 2.0 기반의 인증 프로토콜 : OpenID Connect 인증을 위한 기본 스코프

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -39,6 +39,7 @@ spring:
             scope:
               - email
               - profile
+              - openid
         provider:
           google:
             authorization-uri: https://accounts.google.com/o/oauth2/auth
