--- a/build.gradle
+++ b/build.gradle
@@ -105,6 +105,15 @@ dependencies {
 
 compileJava {
     options.compilerArgs << '-parameters'
+    options.encoding = 'UTF-8'
+    options.debug = true
+    options.debugOptions.debugLevel = "source,lines,vars"
+}
+
+tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
+    options.debug = true
+    options.debugOptions.debugLevel = "source,lines,vars"
 }
 
 tasks.named('test') {
