--- a/bin/main/application.yml
+++ b/bin/main/application.yml
@@ -77,7 +77,7 @@ jwt:
       secure: true
       path: /
       max-age: 604800  # 7일 (7 * 24 * 60 * 60)
-      same-site: Strict
+      same-site: None
 
 logging:
   level:
