--- a/bin/main/application.yml
+++ b/bin/main/application.yml
@@ -66,7 +66,7 @@ redis:
 # JWT 설정
 jwt:
   secret: ${JWT_SECRET}
-  access-token-validity-in-seconds: 300 #5분  # 86400    # 24시간
+  access-token-validity-in-seconds: 86400 #300 #5분  #86400 # 24시간
   refresh-token-validity-in-seconds: 1209600  # 14일
   admin-token-validity-in-seconds: 31536000    # 1년
   admin-token: ${ADMIN-TOKEN} # 관리자 토큰
@@ -76,8 +76,9 @@ jwt:
       http-only: true
       secure: true
       path: /
-      max-age: 604800  # 7일 (7 * 24 * 60 * 60)
+      max-age: 1209600  # 14일
       same-site: None
+      domain: fridgepal.com
 
 logging:
   level:
